--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-node_modules
+# Dependencies
+node_modules/
+client/node_modules/
+
+# Build outputs
+dist/
+client/dist/
+
+# Environment variables
 .env
+.env.*
+!.env.example
+client/.env.*
+!client/.env.example
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs
+.vscode/
+.idea/
+.DS_Store
+
+# Prisma
+/prisma/migrations/
+/prisma/*.db
+/prisma/*.db-journal
+
+# Uploads
+uploads/
